Show all modified products, Added + fixed updatedAt bug